<resources>
    <string name="app_name">Trabalho_final</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_login">Entrar</string>
    <string name="nao_possui_cadastro">Ainda não tenho cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="welcome">"Bem vindo!"</string>
    <string name="invalid_username">Não é um nome válido</string>
    <string name="invalid_password">A senha deve ter mais que 5 caracteres</string>
    <string name="login_failed">"O login falhou"</string>
    <string name="cadastro">"Cadastro"</string>
    <string name="name">"Nome"</string>
    <string name="horarios">"Horários</string>
    <string name="provas_e_trabalhos">"Provas/Trabalhos"</string>
    <string name="perfil">"Perfil"</string>
    <string name="cursando">"Cursando"</string>
    <string name="historico">"Histórico"</string>
    <string name="eventos_palestras">"Eventos/Palestras"</string>
    <string name="notas">"Notas"</string>
    <string name="cursos">"Cursos"</string>
    <string name="adicionar_cursos">"Adicionar cursos"</string>
    <string name="adicionar_novo_curso">"Adicionar um novo curso"</string>
    <string name="periodo_ano_semestre_em_curso">"Período/Ano/Semestre em curso:"</string>
    <string name="materias_em_curso">"Matérias em curso:"</string>
    <string name="adicionar">"Adicionar"</string>
    <string name="salvar">"Salvar"</string>
    <string name="adicionar_nova_materia">"Adicionar nova matéria"</string>
    <string name="salas">"Salas"</string>
    <string name="salas_teoria">"Sala teoria"</string>
    <string name="salas_pratica">"Sala prática"</string>
    <string name="professores">"Professores"</string>
    <string name="sair">"Sair"</string>
    <string name="nome_do_curso">"Nome do curso"</string>
    <string name="materias">"Matérias"</string>
    <string name="editar_curso">"Editar Curso"</string>
    <string name="adicionar_periodo">"Adicionar Período"</string>


    <string-array name="periodosArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="diasDaSemanaArray">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sábado</item>
        <item>Domingo</item>

    </string-array>

    <string name="adicionar_prova_trabalho">"Adicionar nova prova/trabalho:"</string>
    <string name="descricao_tarefa">"Descrição"</string>
    <string name="materia_tarefa">"Matéria"</string>
    <string name="data_tarefa">"Data:"</string>


</resources>