<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo_app"
    android:layout_gravity="center"
    android:layout_marginBottom="15dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/action_login"
    android:textSize="40dp"
    android:layout_gravity="center"
    android:textStyle="bold"
    android:layout_marginBottom="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:id="@+id/txt_login_email"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:id="@+id/txt_login_password"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:id="@+id/btn_login"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nao_possui_cadastro"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/btn_cadastro"
        android:textSize="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        style="?attr/materialButtonOutlinedStyle"
        />





</LinearLayout>