<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PerfilFragment"
    android:orientation="vertical"
    android:padding="25dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"

       />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_perfil_nome"
        android:text="Nome da pessoa"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_perfil_email"
        android:text="Email da pessoa"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cursando"
        android:text="@string/cursando"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_eventos_palestras"
        android:text="@string/eventos_palestras"
        android:textStyle="bold"
        android:textSize="20dp"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_histórico"
        android:text="@string/historico"
        android:textStyle="bold"
        android:textSize="20dp"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_notas"
        android:text="@string/notas"
        android:textStyle="bold"
        android:textSize="20dp"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>


</LinearLayout>
</ScrollView>