<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FormularioMateriaActivity"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_nova_materia"
        android:textSize="30dp"
        android:textStyle="bold"
        android:id="@+id/txt_adicionar_nova_materia"
        android:layout_marginBottom="15dp"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/txt_adicionar_nova_materia"
        android:textSize="20dp"
        android:id="@+id/lbl_nome_da_materia"
        />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/horarios"-->
<!--        android:textSize="25dp"-->
<!--        android:id="@+id/txt_horarios"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:layout_below="@+id/txt_nome_da_materia"-->
<!--        android:textStyle="bold"-->
<!--        />-->

<!--    <Spinner-->
<!--        android:id="@+id/spinner_diaDaSemana1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/txt_horarios"-->
<!--        android:minHeight="48dp"-->
<!--        android:spinnerMode="dropdown"-->
<!--         />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salas"
        android:textSize="25dp"
        android:id="@+id/txt_salasDeAula"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/lbl_nome_da_materia"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salas_teoria"
        android:textSize="20dp"
        android:id="@+id/txt_salaTeoria"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/txt_salasDeAula"

        />

    <EditText
        android:id="@+id/lbl_sala_teoria"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt_salasDeAula"
        android:layout_toRightOf="@+id/txt_salaTeoria"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salas_pratica"
        android:textSize="20dp"
        android:id="@+id/txt_salaPratica"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/txt_salaTeoria"

        />

    <EditText
        android:id="@+id/lbl_sala_pratica"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt_salaTeoria"
        android:layout_toRightOf="@+id/txt_salaPratica"
        android:textSize="20dp" />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/professores"-->
<!--        android:textSize="25dp"-->
<!--        android:id="@+id/txt_professores"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:layout_below="@+id/txt_salaPratica"-->
<!--        android:textStyle="bold"-->
<!--        />-->

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/adicionar"-->
<!--        android:layout_alignParentRight="true"-->
<!--        app:icon="@drawable/baseline_add_black_24"-->
<!--        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
<!--        android:id="@+id/btn_adicionar_novo_professor"-->
<!--        android:layout_alignTop="@+id/txt_professores"/>-->



<!--    <ListView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/lista_de_professores"-->
<!--        android:layout_below="@+id/txt_professores"-->
<!--        />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_salvar_nova_materia" />

</RelativeLayout>
</ScrollView>